# FengWu-4DVar

./: .awsrc.example  .env.example  README.md  cyclic_da.py  cyclic_da_colab.py  docker-compose.yaml  garage.toml  note.txt  pyproject.toml  requirements.txt
networks/: transformer.py
networks/utils/: swinblock.py
notebooks/: async_data_prep_weather_forecast.ipynb  data_prep_weather_forecast.ipynb  fengwu.ipynb  mask_resize.ipynb
utils/: builder.py  logger.py  metrics.py  metrics_bk.py  misc.py
visualize/: visualize_rmse_bias_npy.py  visualize_xb_npy.py
