[tool.poetry]
name = "FengWu-4DVar"
version = "0.0.0"
description = "FengWu-4DVar"
package-mode = false

[tool.poe.tasks]
dev = "python app.py"
lint = "ruff check --fix"
pretty = "ruff format"
test = "echo You are running test command"
deploy = "echo You are running deploy command"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
environs = "^14.1.0"
torch = { version = "2.5.0", source = "pytorch" }
torchvision = { version = "0.20.0", source = "pytorch" }
# mmcv = { version = "2.2.0", source = "mmcv" }
numpy = "1.26.0"
einops = "^0.8.0"
fairscale = "^0.4.13"
timm = "^0.9.2"
torch-harmonics = "^0.7.3"
mmengine = "^0.10.5"
zarr = "^3.0.0"
xarray = {extras = ["complete"], version = "^2025.1.1"}
numba = "0.60.0"
pandas = "2.1.1"
minio = "^7.2.15"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.30.0"
mypy = "^1.10.1"
pre-commit = "^4.0.0"
ruff = "^0.7.0"
awscli = "^1.37.13"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

# [[tool.poetry.source]]
# name = "mmcv"
# # Pick from here:
# # https://mmcv.readthedocs.io/en/latest/get_started/installation.html#install-with-pip
# # NOTE: It's recommended to install 1.x.0
# url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.4/index.html"
# priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
